# CQU_CS

./: .gitignore  README.md
ppt-pdf 开卷打印小工具/: README.md  app.py  requirements.txt
专业能力测试/: 专业测试准备.md
专业能力测试/测试题目集/: 2017Final 乐观的中考生.md  2017final友元函数之全班同学的平均绩点.md  7-1 幸运彩票.md  7-10 太空键盘.md  7-11 比较大小.md  7-12 降价提醒机器人.md  7-13 统计平均成绩与及格人数.md  7-14 输出给定年份区间之内的所有闰年.md  7-15 购物车.md  7-16 谁是黑岩目高.md  7-17 跟奥巴马一起画方块.md  7-18 这是字符串题.md  7-19 大幂数.md  7-2 样本方差.md  7-20 现代战争.md  7-21 市场.md  7-22 图像模糊处理.md  7-23 胎压监测.md  7-24 考试座位号.md  7-25 东风谷早苗.md  7-26 打印沙漏.md  7-27 数组元素循环右移问题.md  7-28 计算天数.md  7-29 然后是几点.md  7-3 陈老师给大家发糖果.md  7-30 人民币兑换.md  7-31 正整数A+B.md  7-32 个位数统计.md  7-33 念数字.md  7-34 大笨钟的心情.md  7-35 检查密码.md  7-36 谁是赢家.md  7-37 不变初心数.md  7-38 新胖子公式.md  7-39 计算指数.md  7-4 双十一购物.md  7-40 链表去重.md  7-41 装箱问题.md  7-42 分书问题的递归枚举算法.md  7-43 愿天下有情人都是失散多年的兄妹.md  (+64 more)
并行与分布式计算/分布式/fbs_ex/: 实验一.doc  实验四.doc
并行与分布式计算/分布式/fbs_project/: Makefile  README.md  pack_submission.sh  report.md
数据库系统/: 2025数据库系统课程复习重点（数据库系统）.doc  output.docx
编译原理/by_ex/: 20231542-任明明-实验报告1.docx  20231542-任明明-实验报告2.docx  AGENTS.md  pdf_text.txt  run.sh  实验指导书.txt  编译原理实验报告二.docx  重庆大学程序设计系列课程综合实验报告（编译原理毕昇编译器验证实验）.docx
编译原理/by_ex/bex3/: readme.txt
编译原理/by_ex/bex4/: exp4_all.txt  exp4_content.txt  exp4_detailed.txt  readme.md  run_autotuner.sh  run_exp5.sh  实验四_一键执行手册.md  实验四_操作指南与证据收集手册.md  实验四_验证证据汇总.md  实验报告2_三四章.md  实验指导书.txt
编译原理/by_ex/pp/ex2/: CMakeLists.txt
编译原理/by_ex/pp/ex2/src/front/: lexical.cpp  semantic.cpp
编译原理/by_ex/pp/ex2/src/tools/: ir_executor.cpp
编译原理/by_ex/pp/ex2/test/: build.py  score.py
自然语言处理/实验/: task.txt  实验一.doc  实验三.doc  实验二.doc  实验四.doc
自然语言处理/实验/ex1/: exp1_report.md  exp1_viterbi.py
自然语言处理/实验/ex3/: task.txt  实现思路.docx  模型训练-待补全.docx  预测写诗-待补全.docx
自然语言处理/实验/ex4/: comparison_results.json  experiment4.ipynb  poetry_utf8.txt  (+14 more)
自然语言处理/期末复习/: NLP.docx  NLP专有名词索引.docx
(+165 files in other folders)
